@@ -38,7 +38,9 @@ CHANGELOG
 - Switched to the most recent version of re2c (V0.9.7.dev).
 - Fixed a como compilation error and several como --a warnings.
 - The T_EOF token doesn't carry the value of the previous token anymore.
-
+- Added operator()== to the token classes to fix the ambiguity error reported
+  by the True64 compiler.
+  
 Thu Apr  7 10:07:45 WEDT 2005
 Version 1.1.16
 - Fixed a bug in the white space eating component, which prevented a C++ 
